# favicon

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  debug.py  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
favicon/: __init__.py  favicon.py
src/favicon/: __init__.py  favicon.py
tests/: conftest.py  test_favicon.py
